==> xiaoxiang781216/nuttx/arch/arm/src/kinetis/kinetis_pwm.c <==
#include <nuttx/config.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdio.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/spinlock.h>
#include <nuttx/timers/pwm.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "chip.h"
#include "kinetis.h"
#include "kinetis_pwm.h"
#include "hardware/kinetis_gpio.h"
#include "hardware/kinetis_ftm.h"
#include "hardware/kinetis_sim.h"
#  define pwm_dumpgpio(p,m) kinetis_pindump(p,m)
#  define pwm_dumpgpio(p,m)
#  define pwm_dumpregs(priv,msg)

static void pwm_dumpregs(struct kinetis_pwmtimer_s *priv,
                         const char *msg)
{
  int nchannels = (priv->tpmid == 0) ? 8 : 2;

  pwminfo("%s:\n", msg);
  pwminfo("  FTM%d_SC:     %04x   FTM%d_CNT:  %04x     FTM%d_MOD:  %04x\n",
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_SC_OFFSET),
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_CNT_OFFSET),
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_MOD_OFFSET));
  pwminfo("  FTM%d_STATUS: %04x   FTM%d_CONF: %04x\n",
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_STATUS_OFFSET),
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_CONF_OFFSET));
  pwminfo("   FTM%d_C0SC:  %04x   FTM%d_C0V:  %04x\n",
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_C0SC_OFFSET),
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_C0V_OFFSET));
  pwminfo("   FTM%d_C1SC:  %04x   FTM%d_C1V:  %04x\n",
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_C1SC_OFFSET),
          priv->tpmid,
          pwm_getreg(priv, KINETIS_FTM_C1V_OFFSET));

  if (nchannels >= 3)
    {
      pwminfo("   FTM%d_C2SC:  %04x   FTM%d_C2V:  %04x\n",
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C2SC_OFFSET),
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C2V_OFFSET));
    }

  if (nchannels >= 4)
    {
      pwminfo("   FTM%d_C3SC:  %04x   FTM%d_C3V:  %04x\n",
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C3SC_OFFSET),
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C3V_OFFSET));
    }

  if (nchannels >= 5)
    {
      pwminfo("   FTM%d_C4SC:  %04x   FTM%d_C4V:  %04x\n",
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C4SC_OFFSET),
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C4V_OFFSET));
    }

  if (nchannels >= 6)
    {
      pwminfo("   FTM%d_C5SC:  %04x   FTM%d_C5V:  %04x\n",
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C5SC_OFFSET),
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C5V_OFFSET));
    }

  if (nchannels >= 7)
    {
      pwminfo("   FTM%d_C6SC:  %04x   FTM%d_C6V:  %04x\n",
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C6SC_OFFSET),
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C6V_OFFSET));
    }

  if (nchannels >= 8)
    {
      pwminfo("   FTM%d_C7SC:  %04x   FTM%d_C7V:  %04x\n",
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C7SC_OFFSET),
              priv->tpmid,
              pwm_getreg(priv, KINETIS_FTM_C7V_OFFSET));
    }
}

static int pwm_setup(struct pwm_lowerhalf_s *dev)
{
  uint32_t regval;
  struct kinetis_pwmtimer_s *priv = (struct kinetis_pwmtimer_s *)dev;

  /* Enable access to FTM modules */

  regval = getreg32(KINETIS_SIM_SCGC6);
  regval |= SIM_SCGC6_FTM0 | SIM_SCGC6_FTM1;
  putreg32(regval, KINETIS_SIM_SCGC6);

  regval = getreg32(KINETIS_SIM_SCGC3);
  regval |= SIM_SCGC3_FTM2;
#if defined(CONFIG_KINETIS_FTM3_PWM)
  regval |= SIM_SCGC3_FTM3;
#endif
  putreg32(regval, KINETIS_SIM_SCGC3);

  pwminfo("FTM%d pincfg: %08" PRIx32 "\n", priv->tpmid, priv->pincfg);
  pwm_dumpregs(priv, "Initially");

  /* Configure the PWM output pin, but do not start the timer yet */

  kinetis_pinconfig(priv->pincfg);
  pwm_dumpgpio(priv->pincfg, "PWM setup");
  return OK;
}

static int pwm_shutdown(struct pwm_lowerhalf_s *dev)
{
  struct kinetis_pwmtimer_s *priv = (struct kinetis_pwmtimer_s *)dev;
  uint32_t pincfg;

  pwminfo("FTM%d pincfg: %08" PRIx32 "\n", priv->tpmid, priv->pincfg);

  /* Make sure that the output has been stopped */

  pwm_stop(dev);

  /* Then put the GPIO pin back to the default state */

  pincfg  = (priv->pincfg & ~(_PIN_MODE_MASK));
  pincfg |= GPIO_INPUT;
  kinetis_pinconfig(pincfg);
  return OK;
}

static int pwm_start(struct pwm_lowerhalf_s *dev,
                     const struct pwm_info_s *info)
{
  struct kinetis_pwmtimer_s *priv = (struct kinetis_pwmtimer_s *)dev;
  return pwm_timer(priv, info);
}

static int pwm_stop(struct pwm_lowerhalf_s *dev)
{
  struct kinetis_pwmtimer_s *priv = (struct kinetis_pwmtimer_s *)dev;
  irqstate_t flags;

  pwminfo("FTM%d\n", priv->tpmid);

  /* Disable interrupts momentary to stop any ongoing timer processing and
   * to prevent any concurrent access to the reset register.
   */

  flags = enter_critical_section();

  /* Disable further interrupts and stop the timer */

  pwm_putreg(priv, KINETIS_FTM_SC_OFFSET, FTM_SC_CLKS_NONE);
  pwm_putreg(priv, KINETIS_FTM_CNT_OFFSET, 0);

  /* Determine which timer channel to clear */

  switch (priv->channel)
    {
      case 0:
        pwm_putreg(priv, KINETIS_FTM_C0V_OFFSET, 0);
        break;

      case 1:
        pwm_putreg(priv, KINETIS_FTM_C1V_OFFSET, 0);
        break;

      case 2:
        pwm_putreg(priv, KINETIS_FTM_C2V_OFFSET, 0);
        break;

      case 3:
        pwm_putreg(priv, KINETIS_FTM_C3V_OFFSET, 0);
        break;

      case 4:
        pwm_putreg(priv, KINETIS_FTM_C4V_OFFSET, 0);
        break;

      case 5:
        pwm_putreg(priv, KINETIS_FTM_C5V_OFFSET, 0);
        break;

      case 6:
        pwm_putreg(priv, KINETIS_FTM_C6V_OFFSET, 0);
        break;

      case 7:
        pwm_putreg(priv, KINETIS_FTM_C7V_OFFSET, 0);
        break;

      default:
        pwmerr("ERROR: No such channel: %d\n", priv->channel);
        leave_critical_section(flags);
        return -EINVAL;
    }

  leave_critical_section(flags);

  pwm_dumpregs(priv, "After stop");
  return OK;
}
